# pyrail

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  publish.yml  ruff-lint.yml  test.yml  tests.yml
docker/: entrypoint.sh
examples/: bad_composition.json  bad_disturbances.json  composition.json  connections.json  disturbances.json  liveboard.json  liveboard_arrivals.json  stations.json  vehicle.json
homeassistant/custom_components/sensor/: nmbs.py
pyrail/: __init__.py  api_endpoints.py  api_methods.py  exceptions.py  irail.py  models.py
tests/: __init__.py  test_irail.py  test_typed.py
