[project]
name = "pyrail"
version = "0.4.1"
description = "A Python wrapper for the iRail API"
authors = [{name = "Jorim Tielemans", email = "tielemans.jorim@gmail.com"}]
license = "Apache-2.0"
readme = "README.md"
keywords = ["irail", "nmbs"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
urls = { Homepage = "https://github.com/tjorim/pyrail", Repository = "https://github.com/tjorim/pyrail", Documentation = "https://github.com/tjorim/pyrail" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiohttp>=3.13.5,<4.0.0",
    "mashumaro[orjson]>=3.21,<4.0.0",
]

[dependency-groups]
test = [
    "pytest>=8.3.4,<10.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-asyncio>=0.25.1,<1.4.0",
]
dev = [
    "ruff>=0.15.12,<0.16.0",
    "ty>=0.0.35,<0.0.36",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "C",  # complexity
    "D",  # docstrings
    "E",  # pycodestyle
    "F",  # pyflakes
    "G",  # flake8-logging-format
    "I",  # isort
    "W",  # pycodestyle warnings
]
ignore = [
    "D203", # vs D211 (no blank line before class)
    "D213", # vs D212 (multi line summary first line)
    "E501", # line too long
    "W191", # indentation contains tabs
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
property-decorators = ["propcache.cached_property"]

[tool.hatch.build.targets.wheel]
packages = ["pyrail"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
